# osutils

./: .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/osutils/: defines.hpp  directories.hpp  filepath.hpp  osutils.hpp  platform.hpp
src/: CMakeLists.txt  directories.cpp  filepath.cpp
test/: CMakeLists.txt  directories_test.cpp  filepath_test.cpp  tests.cpp
